--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p class="d-flex justify-content-center ; mx-5 my-5" style="border: 1px solid red ; background :rgb(26, 21, 25); color: blue; font-size: 20px; font-weight: bold; font-style: italic; padding: 15px;">Click the button to see पहाड़ा का Answer</p>
     <br>
     <br>
-    <div class="d-flex justify-content-center ; mx-5 my-5" id="iddd">
+    <div class="d-flex justify-content-center ; id="iddd">
     <br>
    
     <label for="domTextElement" style="border: 1px solid red ; background :rgb(26, 21, 25); color: blue; font-size: 20px; font-weight: bold; font-style: italic; margin-top: 10px; margin-right: 10px; padding: 15px;">  Table  / पहाड़ा  : </label>
