--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="d-flex justify-content-center ; id="iddd">
     <br>
    
-    <label for="domTextElement" style="border: 1px solid red ; background :rgb(26, 21, 25); color: blue; font-size: 20px; font-weight: bold; font-style: italic; margin-top: 10px; margin-right: 10px; padding: 15px;">  Table  / पहाड़ा  : </label>
+   <!-- <label for="domTextElement" style="border: 1px solid red ; background :rgb(26, 21, 25); color: blue; font-size: 20px; font-weight: bold; font-style: italic; margin-top: 10px; margin-right: 10px; padding: 15px;">  Table  / पहाड़ा  : </label>-->
     <input type="text" id="domTextElement" placeholder="Enter No Here eg: 5" autofocus> 
     
     <button type="button" class="btn btn-primary" onclick="myFunction()"> 
